objects/Batch_Result__c.object
<CustomObject>
    <fields>
        <fullName>Error__c</fullName>
        <label>Error</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Mark_Lock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Mark Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Update_Success__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Update Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Id__c</fullName>
        <label>Object Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Mark_Lock_TimeStamp__c</fullName>
        <label>Update Mark Lock TimeStamp</label>
        <type>DateTime</type>
    </fields>
</CustomObject>